# veredas

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile.marimo  Dockerfile.nimtable  README.md  docker-compose.yml  main.py  nimtable-config.yaml  pyproject.toml
.github/workflows/: deploy.yml  pipeline.yml  pr.yml
agents/: base.py
agents/insight/: __init__.py  agent.py
agents/query/: __init__.py  agent.py  router.py
api/: dependencies.py  main.py  models.py  query_cache.py  rate_limiter.py  series_config.py  sync.py
config/: domain.py
config/domains/: README.md  br_macro.yaml
data/feeds/: bcb_ipca.yaml  bcb_selic.yaml  bcb_usd_brl.yaml  ibge_pnad.yaml  tesouro.yaml  tesouro_ipca.yaml
docs/adr/: 001-python-typescript-split.md  002-duckdb-as-analytical-engine.md  003-tasks-agents-over-monolithic-pipeline.md  004-r2-parquet-over-database.md  005-github-actions-over-prefect-v1.md  006-multi-provider-vs-single-cloud.md  011-scalability-and-serving-evolution.md
docs/market-research/: 01-white-label-dark-factory.md  (+3 more)
frontend/: index.html  package-lock.json  package.json
notebooks/: catalog.py  gold_explorer.py  iceberg_catalog.py  layer_compare.py  pyproject.toml  register_tables.py  save_changes.py  test_r2_catalog.py
pipeline/: __main__.py  feed_config.py  flow.py
scripts/: download_fixtures.py  full_refresh.py  marimo-entrypoint.sh  nimtable-entrypoint.sh  register_catalog.py  rename_feeds_r2.py  seed_local_data.py
security/: sanitize.py  xml_fencing.py
storage/: __init__.py  local.py  protocol.py  r2.py
tasks/: base.py
(+95 files in other folders)
